[Webpack] Try to apply

--- a/src/__test__/canvasTutorial/index.html
+++ b/src/__test__/canvasTutorial/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<canvas id="canvasContainer"></canvas>
+	<canvas id="canvasContainer" width="150" height="150">123</canvas>
 	<script src="./main.js"></script>
 </body>
 </html>
