--- a/src/__test__/shape/index.html
+++ b/src/__test__/shape/index.html
@@ -5,9 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<style>
+		html,body{ width: 100%; height: 100%; }
+	</style>
 </head>
 <body>
-	<canvas id="canvasContainer" width="150" height="150">123</canvas>
-	<script src="./main.js"></script>
+	<canvas id="canvas" width="1920" height="100%"></canvas>
+	<script src="../../draw.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
