--- a/src/__test__/shape/index.html
+++ b/src/__test__/shape/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<style>
-		html,body{ width: 100%; height: 100%; }
+		html,
+		body {
+			width: 100%;
+			height: 100%;
+		}
 	</style>
 </head>
+
 <body>
-	<canvas id="canvas" width="1920" height="100%"></canvas>
+	<canvas id="canvas" width="1920" height="1080"></canvas>
 	<script src="../../draw.js"></script>
-	<script src="index.js"></script>
+	<script src="./index.js"></script>
 </body>
+
 </html>
