[Drag and drop] Add

--- a/src/__test__/rect/index.html
+++ b/src/__test__/rect/index.html
@@ -17,6 +17,7 @@
 
 <body>
 	<canvas id="canvas" width="1920" height="1080"></canvas>
+	<script> window.log = window.console.log </script>
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
