--- a/src/__test__/rect/index.html
+++ b/src/__test__/rect/index.html
@@ -12,11 +12,14 @@
 			width: 100%;
 			height: 100%;
 		}
+		#canvas {
+			border: 1px solid blue;
+		}
 	</style>
 </head>
 
 <body>
-	<canvas id="canvas" width="1920" height="1080"></canvas>
+	<canvas id="canvas" width="800" height="600"></canvas>
 	<script> window.log = window.console.log </script>
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
