--- a/src/__test__/importData/index.html
+++ b/src/__test__/importData/index.html
@@ -20,6 +20,9 @@
 
 <body>
 	<canvas id="canvas" width="800" height="600"></canvas>
+	<div style="margin-top: 20px;">
+		<input type="file" name="upload" id="uploadButton" onchange="onFileInputChange( callback )">
+	</div>
 	<script> window.log = window.console.log </script>
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
