--- a/src/__test__/exportAndImportData/index.html
+++ b/src/__test__/exportAndImportData/index.html
@@ -23,7 +23,7 @@
 	<div style="margin-top: 20px;">
 		<button id="exportBtn">Export</button>
 		&nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="file" name="upload" id="uploadButton" onchange="onFileInputChange( callback )">
+		<input type="file" name="upload" id="uploadButton">
 	</div>
 	<script> window.log = window.console.log </script>
 	<script src="../../draw.js"></script>
