--- a/src/__test__/comprehensive/index.html
+++ b/src/__test__/comprehensive/index.html
@@ -20,7 +20,12 @@
 
 <body>
 	<canvas id="canvas" width="800" height="600"></canvas>
-	<script> window.log = window.console.log </script>
+	<div style="margin-top: 20px;">
+		<button id="exportBtn">Export</button>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		<input type="file" name="upload" id="uploadButton">
+	</div>
+
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
