[Interaction] Drag line

--- a/src/__test__/comprehensive/index.html
+++ b/src/__test__/comprehensive/index.html
@@ -27,6 +27,9 @@
 		<input type="file" name="upload" id="uploadButton">
 	</div>
 
+	<script>
+		window.log = window.console.log
+	</script>
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
