[Interaction-Zoom and pan] Complement the main incluing rectangle

--- a/src/__test__/comprehensive/index.html
+++ b/src/__test__/comprehensive/index.html
@@ -20,12 +20,20 @@
 </head>
 
 <body>
-	<canvas id="canvas" width="800" height="600"></canvas>
+	<canvas id="canvas" width="600" height="600"></canvas>
 	<div style="margin-top: 20px;">
 		<button id="exportBtn">Export</button>
 		&nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="file" name="upload" id="uploadButton">
 	</div>
+	<!-- <div>
+		<button id="zoomInButton" >Zoom in</button>
+		<button id="zoomOutButton" >Zoom out</button>
+		<button id="panTop" >Pan to top</button>
+		<button id="panBottom" >Pan to bottom</button>
+		<button id="panLeft" >Pan to left</button>
+		<button id="panRight" >Pan to right</button>
+	</div> -->
 
 	<script>
 		window.log = window.console.log
