[Interaction] Zoom based on random point-developint-1

--- a/src/__test__/comprehensive/index.html
+++ b/src/__test__/comprehensive/index.html
@@ -11,6 +11,8 @@
 		body {
 			width: 100%;
 			height: 100%;
+			margin: 0;
+			padding: 0;
 		}
 		#canvas {
 			border: 1px solid blue;
@@ -26,18 +28,7 @@
 		&nbsp;&nbsp;&nbsp;&nbsp;
 		<input type="file" name="upload" id="uploadButton">
 	</div>
-	<!-- <div>
-		<button id="zoomInButton" >Zoom in</button>
-		<button id="zoomOutButton" >Zoom out</button>
-		<button id="panTop" >Pan to top</button>
-		<button id="panBottom" >Pan to bottom</button>
-		<button id="panLeft" >Pan to left</button>
-		<button id="panRight" >Pan to right</button>
-	</div> -->
 
-	<script>
-		window.log = window.console.log
-	</script>
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
