--- a/src/__test__/comprehensive/index.html
+++ b/src/__test__/comprehensive/index.html
@@ -15,7 +15,7 @@
 			padding: 0;
 		}
 		#canvas {
-			border: 1px solid blue;
+			border: 1px solid grey;
 			margin: 20px 0 0 20px;
 		}
 	</style>
