--- a/src/__test__/selector/index.html
+++ b/src/__test__/selector/index.html
@@ -11,16 +11,24 @@
 		body {
 			width: 100%;
 			height: 100%;
+			margin: 0;
+			padding: 0;
 		}
 		#canvas {
-			border: 1px solid blue;
+			border: 1px solid grey;
+			margin: 20px 0 0 20px;
 		}
 	</style>
 </head>
 
 <body>
 	<canvas id="canvas" width="800" height="600"></canvas>
-	<script> window.log = window.console.log </script>
+	<div style="margin-top: 20px;">
+		<button id="exportBtn">Export</button>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		<input type="file" name="upload" id="uploadButton">
+	</div>
+
 	<script src="../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
