[View port] Zoom and pan - developing - 1

--- a/src/__test__/elements/Point/index.html
+++ b/src/__test__/elements/Point/index.html
@@ -23,13 +23,8 @@
 
 <body>
 	<canvas id="canvas" width="800" height="600"></canvas>
-	<div style="margin-top: 20px;">
-		<button id="exportBtn">Export</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="file" name="upload" id="uploadButton">
-	</div>
 
-	<script src="../../draw.js"></script>
+	<script src="../../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
 
