Add: [Util] Methods for testing performance

--- a/src/__test__/elements/polygon/index.html
+++ b/src/__test__/elements/polygon/index.html
@@ -16,19 +16,13 @@
 		}
 		#canvas {
 			border: 1px solid grey;
-			margin: 20px 0 0 20px;
+			/* margin: 20px 0 0 20px; */
 		}
 	</style>
 </head>
 
 <body>
-	<canvas id="canvas" width="800" height="600"></canvas>
-	<div style="margin-top: 20px;">
-		<button id="exportBtn">Export</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="file" name="upload" id="uploadButton">
-	</div>
-
+	<canvas id="canvas" width="1920" height="1080"></canvas>
 	<script src="../../../draw.js"></script>
 	<script src="./index.js"></script>
 </body>
